--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,1 +1,22 @@
-<h1>Make your form here</h1>
+<form method="post" action="/pirates">
+  <label for="pirate[name]"> Pirate Name</label>
+  <input type="text" id="pirate[name]" name="pirate[name]">
+  <label for="pirate[weight]"> Pirate Weight </label>
+  <input type="text" id="pirate[weight]" name="pirate[weight]">
+  <label for="pirate[height]"> Pirate Height</label>
+  <input type="text" id="pirate[height]" name="pirate[height]">
+  <input for="pirate[ships][][name]"> Ship Name </label>
+  <input type="text" id="ship_name_1" name="ship_name_1">
+  <input for="pirate[ships][][type]"> Ship Type </label>
+  <input type="text" id="ship_type_1" name="ship_type_1">
+  <input for="pirate[ships][][booty]"> Ship's Booty </label>
+  <input type="text" id="ship_booty_1" name="ship_booty_1">
+  <input for="pirate[ships][][name]"> Ship Name </label>
+  <input type="text" id="ship_name_2" name="ship_name_2">
+  <input for="pirate[ships][][type]"> Ship Name </label>
+  <input type="text" id="ship_type_2" name="ship_type_2">
+  <input for="pirate[ships][][booty]"> Ship Name </label>
+  <input type="text" id="ship_booty_2" name="ship_booty_2">
+  <input type="submit" value="submit">
+</form>
+
