--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,22 +1,41 @@
-<form method="post" action="/pirates">
-  <label for="pirate[name]"> Pirate Name</label>
-  <input type="text" id="pirate[name]" name="pirate[name]">
-  <label for="pirate[weight]"> Pirate Weight </label>
-  <input type="text" id="pirate[weight]" name="pirate[weight]">
-  <label for="pirate[height]"> Pirate Height</label>
-  <input type="text" id="pirate[height]" name="pirate[height]">
-  <input for="pirate[ships][][name]"> Ship Name </label>
-  <input type="text" id="ship_name_1" name="ship_name_1">
-  <input for="pirate[ships][][type]"> Ship Type </label>
-  <input type="text" id="ship_type_1" name="ship_type_1">
-  <input for="pirate[ships][][booty]"> Ship's Booty </label>
-  <input type="text" id="ship_booty_1" name="ship_booty_1">
-  <input for="pirate[ships][][name]"> Ship Name </label>
-  <input type="text" id="ship_name_2" name="ship_name_2">
-  <input for="pirate[ships][][type]"> Ship Name </label>
-  <input type="text" id="ship_type_2" name="ship_type_2">
-  <input for="pirate[ships][][booty]"> Ship Name </label>
-  <input type="text" id="ship_booty_2" name="ship_booty_2">
-  <input type="submit" value="submit">
-</form>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Pirate!</title>
+  </head>
+  <body>
+    <form method="POST" action="/pirates">
+    <h3>Pirate</h3>
+    <p><label for="pirate[name]"> Pirate's Name: </label>
+    <input type="text" id="pirate[name]" name="pirate[name]"></p>
 
+    <p><label for="pirate[height]"> Pirate's Height: </label>
+    <input type="text" id="pirate[height]" name="pirate[height]"></p>
+
+    <p><label for="pirate[weight]"> Pirate's Weight: </label>
+    <input type="text" id="pirate[weight]" name="pirate[weight]"></p>
+
+    <h3>Ship Number One:</h3>
+    <p><label for="ship_name_1"> Ship Number One - Name: </label>
+    <input type="text" id="ship_name_1" name="pirate[ships][][name]"></p>
+
+    <p><label for="ship_type_1"> Ship Number One - Type: </label>
+    <input type="text" id="ship_type_1" name="pirate[ships][][type]"></p>
+
+    <p><label for="ship_booty_1"> Ship Number One - Booty: </label>
+    <input type="text" id="ship_booty_1" name="pirate[ships][][booty]"></p>
+
+    <h3>Ship Number Two:</h3>
+    <p><label for="ship_name_2"> Ship Number Two - Name: </label>
+    <input type="text" id="ship_name_2" name="pirate[ships][][name]"></p>
+
+    <p><label for="ship_type_2"> Ship Number Two - Type: </label>
+    <input type="text" id="ship_type_2" name="pirate[ships][][type]"></p>
+
+    <p><label for="ship_booty_2"> Ship Number Two - Booty: </label>
+    <input type="text" id="ship_booty_2" name="pirate[ships][][booty]"></p>
+
+    <input type="submit" value="Submit">
+    </form>
+  </body>
+</html>
